[build-system]
requires = ["setuptools>=64", "wheel", "ninja"]
build-backend = "setuptools.build_meta"

[project]
name = "sjlt"
version = "0.1.7"
description = "Sparse Johnson-Lindenstrauss Transform with CUDA acceleration"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "Pingbang Hu", email = "pbb@illinois.edu"}]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.19.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["sjlt*"]

[tool.setuptools.package-data]
sjlt = ["kernels/*.cu", "kernels/*.h"]